--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.4.1
 Django==3.2.9
+django-cors-headers==3.10.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
 PyJWT==2.3.0
